--- a/amplify/dashboard.html
+++ b/amplify/dashboard.html
@@ -1,26 +1,142 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Dashboard - License Tracker</title>
   <style>
-    body { font-family: Arial; margin: 20px; background: #f9f9f9; }
-    .header, .summary, .user-list, ul { margin-bottom: 20px; }
-    .header { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
-    .header-left { display: flex; align-items: center; }
-    img.logo { height: 50px; margin-right: 15px; }
-    button { padding: 8px 14px; border-radius: 4px; border: none; cursor: pointer; }
-    .logout-btn { background: #007BFF; color: white; }
-    .update-btn { background: #007BFF; color: white; }
-    .delete-btn { background: red; color: white; }
-    .promote-btn { background: #28a745; color: white; margin: 2px; }
-    .transfer-btn { background: #ffc107; color: white; margin: 2px; }
-    .delete-user-btn { background: #dc3545; color: white; margin: 2px; }
-    input { padding: 6px; margin: 5px; border-radius: 4px; border: 1px solid #ccc; }
-    li { background: white; padding: 12px; border-radius: 6px; border: 1px solid #ddd; margin-bottom: 10px; }
-    footer { position: fixed; bottom: 10px; right: 20px; font-size: 0.8em; color: #D10074; }
-    .search-box { margin: 10px 0; }
-    .admin-actions { margin-top: 10px; }
-  </style>
+  body {
+    font-family: Arial;
+    margin: 20px;
+    background: #f9f9f9;
+  }
+
+  .header, .summary, .user-list, ul {
+    margin-bottom: 20px;
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .header-left {
+    display: flex;
+    align-items: center;
+  }
+
+  img.logo {
+    height: 50px;
+    margin-right: 15px;
+  }
+
+  button {
+    padding: 8px 14px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+  }
+
+  .logout-btn {
+    background: #007BFF;
+    color: white;
+  }
+
+  .update-btn {
+    background: #007BFF;
+    color: white;
+  }
+
+  .delete-btn {
+    background: red;
+    color: white;
+  }
+
+  .promote-btn {
+    background: #28a745;
+    color: white;
+    margin: 2px;
+  }
+
+  .transfer-btn {
+    background: #ffc107;
+    color: white;
+    margin: 2px;
+  }
+
+  .delete-user-btn {
+    background: #dc3545;
+    color: white;
+    margin: 2px;
+  }
+
+  .teal-btn {
+    background-color: #D10074;
+    color: white;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+
+  .teal-btn:hover {
+    background-color: teal;
+  }
+
+  .long-btn {
+    width: 100%;
+    max-width: 400px;
+    margin: 20px auto;
+    display: block;
+    font-weight: bold;
+  }
+
+  input {
+    padding: 6px;
+    margin: 5px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    width: 100%;
+    max-width: 400px;
+    box-sizing: border-box;
+  }
+
+  form {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    max-width: 500px;
+    margin: 0 auto 20px auto;
+  }
+
+  li {
+    background: white;
+    padding: 12px;
+    border-radius: 6px;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+  }
+
+  footer {
+    position: fixed;
+    bottom: 10px;
+    right: 20px;
+    font-size: 0.8em;
+    color: #D10074;
+  }
+
+  .search-box {
+    margin: 10px 0;
+  }
+
+  .admin-actions {
+    margin-top: 10px;
+  }
+</style>
 </head>
 <body>
 
@@ -40,14 +156,27 @@
 
 <div class="summary" id="summary"></div>
 
-<form onsubmit="addLicense(); return false;">
-  <h3>Add New License</h3>
-  <input type="text" id="license_name" placeholder="License Name" required>
-  <input type="date" id="expiry_date" required>
-  <input type="email" id="owner_email" placeholder="Owner Email" required>
-  <input type="text" id="owner_name" placeholder="Owner Name" required>
-  <button type="submit">Add License</button>
-</form>
+<!-- Teal Add License Button -->
+<button id="show-form-btn" class="teal-btn long-btn">&#x2795; Add New License</button>
+
+<!-- Hidden License Form -->
+<div id="license-form-container" style="display: none;">
+  <form onsubmit="addLicense(); return false;">
+    <h3>Add New License</h3>
+    <input type="text" id="license_name" placeholder="License Name" required>
+    <input type="date" id="expiry_date" required>
+
+    <h4>Primary Owner</h4>
+    <input type="text" id="primary_owner_name" placeholder="Primary Owner Name" required>
+    <input type="email" id="primary_owner_email" placeholder="Primary Owner Email" required>
+
+    <h4>Secondary Owner</h4>
+    <input type="text" id="secondary_owner_name" placeholder="Secondary Owner Name">
+    <input type="email" id="secondary_owner_email" placeholder="Secondary Owner Email">
+
+    <button type="submit" class="teal-btn">Add License</button>
+  </form>
+</div>
 
 <ul id="license-list"></ul>
 
@@ -57,6 +186,21 @@
 
 <script>
   const API_BASE_URL = 'https://eag2mgy9hk.execute-api.us-east-1.amazonaws.com/prod';
+
+  document.addEventListener('DOMContentLoaded', () => {
+  const toggleButton = document.getElementById('show-form-btn');
+  const formContainer = document.getElementById('license-form-container');
+
+  if (toggleButton && formContainer) {
+    toggleButton.addEventListener('click', () => {
+      const isVisible = formContainer.style.display === 'block';
+      formContainer.style.display = isVisible ? 'none' : 'block';
+      if (!isVisible) {
+        formContainer.scrollIntoView({ behavior: 'smooth' });
+      }
+    });
+  }
+});
 
   if (!localStorage.getItem('user_id')) {
     console.log('No user session found, redirecting to login');
@@ -136,7 +280,8 @@
 
       li.innerHTML = `
         <strong>${lic.name}</strong>  Expires: ${lic.expiry_date}<br>
-        Owner: ${lic.owner_name} (${lic.email})<br>
+        Primary Owner: ${lic.primary_owner} (${lic.primary_email})<br>
+        ${lic.secondary_owner ? `Secondary Owner: ${lic.secondary_owner} (${lic.secondary_email})<br>` : ''}
         ${lic.last_updated_by ? `Last updated by: ${lic.last_updated_by} on ${lic.last_updated_on}` : ''}
         <div class="admin-actions">
           <input type="date" id="update-${lic.license_id}" placeholder="New expiry date">
@@ -177,8 +322,10 @@
   async function addLicense() {
     const name = document.getElementById('license_name').value;
     const expiry = document.getElementById('expiry_date').value;
-    const email = document.getElementById('owner_email').value;
-    const ownerName = document.getElementById('owner_name').value;
+    const primaryEmail = document.getElementById('primary_owner_email').value;
+    const primaryOwner = document.getElementById('primary_owner_name').value;
+    const secondaryEmail = document.getElementById('secondary_owner_email').value;
+    const secondaryOwner = document.getElementById('secondary_owner_name').value;
 
     try {
       const response = await fetch(`${API_BASE_URL}/licenses`, {
@@ -187,8 +334,10 @@
         body: JSON.stringify({
           license_name: name,
           expiry_date: expiry,
-          owner_email: email,
-          owner_name: ownerName
+          primary_owner_email: primaryEmail,
+          primary_owner_name: primaryOwner,
+          secondary_owner_email: secondaryEmail,
+          secondary_owner_name: secondaryOwner
         })
       });
 
@@ -198,8 +347,10 @@
         alert('License added successfully!');
         document.getElementById('license_name').value = '';
         document.getElementById('expiry_date').value = '';
-        document.getElementById('owner_email').value = '';
-        document.getElementById('owner_name').value = '';
+        document.getElementById('primary_owner_email').value = '';
+        document.getElementById('primary_owner_name').value = '';
+        document.getElementById('secondary_owner_email').value = '';
+        document.getElementById('secondary_owner_name').value = '';
         loadDashboard();
       } else {
         alert('Error: ' + data.error);
@@ -218,7 +369,7 @@
       return;
     }
 
-       try {
+    try {
       const response = await fetch(`${API_BASE_URL}/licenses/${licenseId}`, {
         method: 'PUT',
         headers: getAuthHeaders(),
@@ -306,7 +457,7 @@
     }
   }
 
-  async function deleteUser(userId) {
+   async function deleteUser(userId) {
     if (!confirm('Are you sure you want to delete this user?')) return;
 
     try {
